# pyCudaPolygon

./: .gitignore  CMakeLists.txt  README.md  derivationNotebook.nb  differentiatefij.nb  setup.py
pyCudaPolygon/: __init__.py  enums.py  intersectionDerivative.nb  pyCudaPolygon.py  pyCudaPolygonLink.py
pyCudaPolygon/polygonMixins/: polygonDraw.py  polygonUtils.py
src/: cuda_check.h  enumTypes.h  kernels.cuh  model.cpp  model.cu  model.hpp  pybindWrapper.cpp
tests/: areaIntersection.ipynb  checkingPlayersReplacementForForceCalculation.ipynb  constrainedForceCalculation.ipynb  drawShapes.ipynb  forceCalculation.ipynb  fullOverlapTesting.ipynb  generateMonoAreaPolygons.ipynb  gradientDescentTest.py  gradientDescentTesting.ipynb  neighborTesting.ipynb  overlapArea.ipynb  randomPolygonGenerator.ipynb  repellingPolygons.ipynb  replaceTensileForces.ipynb  saversAndLoaders.ipynb  seedRandomness.ipynb  setPhi.ipynb  yanking.ipynb
tests/.ipynb_checkpoints/: saversAndLoaders-checkpoint.ipynb
tests/scrap/: randomPolygonGeneratorSCRAP.ipynb
tests/testSaver/: state.npy
